--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "commit": "cz"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.18",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
