--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "commit": "cz"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.18",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
