--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^2.0.10",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.6",
     "element-plus": "^2.2.18",
     "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
@@ -37,11 +38,10 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
-   "husky":"7.0.0",
+    "husky": "7.0.0",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
     "prettier": "^2.7.1",
     "typescript": "~4.5.5"
   }
-
 }
