--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "@vue/compiler-sfc": "^3.2.41",
     "axios": "^1.1.3",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.6",
+    "echarts": "^5.4.0",
     "element-plus": "^2.2.18",
     "normalize.css": "^8.0.1",
-    "vue": "^3.2.13",
+    "vue": "^3.2.36",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
